// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query 1`] = `
Array [
  Object {
    "调": 1,
    "释": "",
    "音": "tʂoŋ",
  },
  Object {
    "调": 4,
    "释": "",
    "音": "tʂoŋ",
  },
]
`;

exports[`query 2`] = `
Array [
  Object {
    "调": 3,
    "释": "",
    "音": "i",
  },
]
`;
